# open-world-game

./: .gitignore  Cargo.toml  build.rs
src/: draw.rs  drawing.rs  main.rs  studio.rs  window.rs
